syntax = "proto3";

// proto 包名
package inventory;

// 生成 golang 代码后的包名
option go_package = "./inventory";

service Inventory{
  rpc SetInv(GoodsIdInfo) returns(Empty);
  rpc InvDetail(GoodsIdInfo) returns(GoodsIdInfo);
  rpc Sell(SellInfo) returns(Empty);
  rpc CallbackSell(SellInfo) returns(Empty);
}
message Empty{}
message GoodsIdInfo{
  int64  goodsId=1;
  int64  Num=2;
}

message SellInfo{
  repeated  GoodsIdInfo goodsInfo=1;
  string    orderSn =2;
}