// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package order;

// 生成 golang 代码后的包名
option go_package = "./order";

service Order{
  rpc CreateOrder(OrderInfoRequest) returns (OrderInfoResponse); //创建订单
  rpc OrderList(OrderFilterRequest) returns (OrderListResponse); // 订单列表
  rpc OrderDetail(OrderInfoRequest) returns (OrderInfoDetailResponse); // 订单详情
  rpc UpdateOrderStatus(OrderStatus) returns (Empty); // 修改订单状态
}

message Empty{}
//订单
message OrderInfoRequest{
  int64 id = 1;
  int64 userId = 3;
  string address = 4;
  string name = 5;
  string mobile = 6;
}
message OrderInfoResponse{
  int64 id = 1;
  int64 userId = 2;
  string orderSn = 3;
  string payType = 4;
  string status = 5;
  int64  total = 7;
  string address = 8;
  string name = 9;
  string mobile = 10;
  string addTime = 11;
}
message OrderFilterRequest{
  int64 userId = 1;
  int64 page = 2;
  int64 pageSize = 3;
}
message OrderListResponse{
  int64 Total = 1;
  repeated OrderInfoResponse Data=2;
}
message OrderInfoDetailResponse{
  OrderInfoResponse orderInfo = 1;
  repeated OrderGoodsDetail goods = 2;
}
message OrderGoodsDetail{
  int64 id = 1;
  int64 orderId = 2;
  int64 goodsId = 3;
  string goodsName = 4;
  int64 goodsPrice = 6;
  int64 nums = 7;
}

message OrderStatus{
  int64 id = 1;
  string orderSn = 2;
  string status = 3;
}